--- a/Inicio.html
+++ b/Inicio.html
@@ -55,7 +55,7 @@
                 return;
             }
     
-            //Obtener elementos HTML donde se mostrarán las notas
+            //Obtener elementos HTML donde se mostrarán las notas.
             const activeNotesContainer = document.getElementById("active-notes");
             const completedNotesContainer = document.getElementById("completed-notes");
     
